--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 envlist =
     {py27,py33,py34,py35}-dj18
+    {py27,py34,py35}-dj19
 
 [testenv]
 commands = python manage.py test
@@ -12,3 +13,4 @@ basepython =
 
 deps =
 	dj18: Django>=1.8,<1.9
+	dj19: Django>=1.9,<1.10
